--- a/MetaLogic/Foundation.Data.Nat.Order.html
+++ b/MetaLogic/Foundation.Data.Nat.Order.html
@@ -2,12 +2,14 @@
 <html><head><meta charset="utf-8"><title>Foundation.Data.Nat.Order</title><link rel="stylesheet" href="Agda.css"><script type="text/javascript" src="highlight-hover.js"></script></head><body><pre class="Agda"><a id="1" class="Keyword">module</a> <a id="8" href="Foundation.Data.Nat.Order.html" class="Module">Foundation.Data.Nat.Order</a> <a id="34" class="Keyword">where</a>
 
 <a id="41" class="Keyword">open</a> <a id="46" class="Keyword">import</a> <a id="53" href="Data.Nat.html" class="Module">Data.Nat</a> <a id="62" class="Keyword">public</a>
-  <a id="71" class="Keyword">using</a> <a id="77" class="Symbol">(</a><a id="78" href="Data.Nat.Base.html#1640" class="Datatype Operator">_≤_</a><a id="81" class="Symbol">;</a> <a id="83" href="Data.Nat.Base.html#1663" class="InductiveConstructor">z≤n</a><a id="86" class="Symbol">)</a>
-<a id="88" class="Keyword">open</a> <a id="93" class="Keyword">import</a> <a id="100" href="Data.Nat.Properties.html" class="Module">Data.Nat.Proper</a><a id="115" href="Data.Nat.Properties.html" class="Deadcode Module">ties</a><a id="119" class="Deadcode"> </a><a id="120" class="Deadcode Keyword">public</a><a id="126" class="Deadcode">
-  </a><a id="129" class="Deadcode Keyword">using</a><a id="134" class="Deadcode"> </a><a id="135" class="Deadcode Symbol">(</a><a id="136" class="Deadcode">
-    </a><a id="141" href="Data.Nat.Properties.html#5682" class="Deadcode Function">≤-trans</a><a id="148" class="Deadcode Symbol">;</a><a id="149" class="Deadcode">
-    </a><a id="154" href="Data.Nat.Properties.html#8262" class="Deadcode Function">n≤1+n</a><a id="159" class="Deadcode Symbol">;</a><a id="160" class="Deadcode"> </a><a id="161" href="Data.Nat.Properties.html#8314" class="Deadcode Function">1+n≰n</a><a id="166" class="Deadcode Symbol">;</a><a id="167" class="Deadcode">
-    </a><a id="172" href="Data.Nat.Properties.html#18740" class="Deadcode Function">m≤m+n</a><a id="177" class="Deadcode Symbol">;</a><a id="178" class="Deadcode"> </a><a id="179" href="Data.Nat.Properties.html#18823" class="Deadcode Function">m≤n+m</a><a id="184" class="Deadcode Symbol">;</a><a id="185" class="Deadcode">
-    </a><a id="190" href="Data.Nat.Properties.html#19404" class="Deadcode Function">+-monoʳ-≤</a><a id="199" class="Deadcode Symbol">;</a><a id="200" class="Deadcode">
-    </a><a id="205" href="Data.Nat.Properties.html#45405" class="Deadcode Function">n∸n≡0</a><a id="210" class="Deadcode Symbol">;</a><a id="211" class="Deadcode"> </a><a id="212" href="Data.Nat.Properties.html#49032" class="Deadcode Function">∸-+-assoc</a><a id="221" class="Deadcode Symbol">;</a><a id="222" class="Deadcode"> </a><a id="223" href="Data.Nat.Properties.html#49958" class="Deadcode Function">m≤n+m∸n</a><a id="230" class="Deadcode Symbol">)</a><a id="231" class="Deadcode">
-</a></pre></body></html>
+  <a id="71" class="Keyword">using</a> <a id="77" class="Symbol">(</a>
+    <a id="83" href="Data.Nat.Base.html#1640" class="Datatype Operator">_≤_</a><a id="86" class="Symbol">;</a> <a id="88" href="Data.Nat.Base.html#1663" class="InductiveConstructor">z≤n</a>
+    <a id="96" class="Symbol">)</a>
+<a id="98" class="Keyword">open</a> <a id="103" class="Keyword">import</a> <a id="110" href="Data.Nat.Properties.html" class="Module">Data.Nat.Properties</a> <a id="130" class="Keyword">public</a>
+  <a id="139" class="Keyword">using</a> <a id="145" class="Symbol">(</a>
+    <a id="151" href="Data.Nat.Properties.html#5682" class="Function">≤-trans</a><a id="158" class="Symbol">;</a>
+    <a id="164" href="Data.Nat.Properties.html#8262" class="Function">n≤1+n</a><a id="169" class="Symbol">;</a> <a id="171" href="Data.Nat.Properties.html#8314" class="Function">1+n≰n</a><a id="176" class="Symbol">;</a>
+    <a id="182" href="Data.Nat.Properties.html#18740" class="Function">m≤m+n</a><a id="187" class="Symbol">;</a> <a id="189" href="Data.Nat.Properties.html#18823" class="Function">m≤n+m</a><a id="194" class="Symbol">;</a>
+    <a id="200" href="Data.Nat.Properties.html#19404" class="Function">+-monoʳ-≤</a><a id="209" class="Symbol">;</a>
+    <a id="215" href="Data.Nat.Properties.html#45405" class="Function">n∸n≡0</a><a id="220" class="Symbol">;</a> <a id="222" href="Data.Nat.Properties.html#49032" class="Function">∸-+-assoc</a><a id="231" class="Symbol">;</a> <a id="233" href="Data.Nat.Properties.html#49958" class="Function">m≤n+m∸n</a><a id="240" class="Symbol">)</a>
+</pre></body></html>
