--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -324,28 +324,28 @@ theorem_name = proof_term</code></pre>
 <p>我们可以问 <code>x : A</code> 在不在列表 <code>xs : 𝕃 A</code> 中, 这引入了列表的属于关系 <code>x ∈ᴸ xs</code> 以及一系列类比于集合论的概念. 我们把它们放在以下模块. 注意与幂集不同的是, <code>x ∈ᴸ xs</code> 不是命题, 因为 <code>x</code> 不保证在 <code>xs</code> 中只出现一次.</p>
 <pre class="Agda"><a id="11290" class="Keyword">open</a> <a id="11295" class="Keyword">import</a> <a id="11302" href="Foundation.Data.List.Cumulation.html" class="Module">Foundation.Data.List.Cumulation</a> <a id="11334" class="Keyword">public</a>
 </pre>
-<p><strong><u>定义</u></strong> 列表的无穷序列 (<code>f : 𝕃ₙ A</code>) 的一个累积 (<code>Cumulation f</code>) 是一个以 <code>n : ℕ</code> 为索引的集族, 对每个 <code>n</code> 都给出了一个 <code>xs : 𝕃 A</code>, 使得 <code>f n ≡ f m ++ xs</code> 成立. 其中 <code>_++_</code> 是列表的拼接操作.</p>
+<p><strong><u>定义</u></strong> 列表的无穷序列 <code>f : 𝕃ₙ A</code> 的一个累积, 记作 <code>Cumulation f</code>, 是一个以 <code>n : ℕ</code> 为索引的集族, 对每个 <code>n</code> 都给出了一个 <code>xs : 𝕃 A</code>, 使得 <code>f n ≡ f m ++ xs</code> 成立. 其中 <code>_++_</code> 是列表的拼接操作.</p>
 <h4 id="向量">向量</h4>
-<pre class="Agda"><a id="11515" class="Keyword">open</a> <a id="11520" class="Keyword">import</a> <a id="11527" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="11547" class="Keyword">public</a>
+<pre class="Agda"><a id="11516" class="Keyword">open</a> <a id="11521" class="Keyword">import</a> <a id="11528" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="11548" class="Keyword">public</a>
 </pre>
 <p>向量 <code>𝕍 A n</code> 是定长可数有限类型. 定长是指向量的类型签名中储存了长度信息 <code>n</code>. 当 <code>A</code> 是集合时, <code>𝕍 A n</code> 也是集合 (<code>isSet𝕍</code>).</p>
 <p>我们可以问 <code>x : A</code> 在不在向量 <code>x⃗ : 𝕍 A n</code> 中, 这引入了向量的属于关系 <code>x ∈⃗ x⃗</code> 以及一系列类比于集合论的概念. 我们把它们放在以下模块. 注意与幂集不同的是, <code>x ∈⃗ x⃗</code> 不是命题, 因为 <code>x</code> 不保证在 <code>x⃗</code> 中只出现一次.</p>
-<pre class="Agda"><a id="11792" class="Keyword">open</a> <a id="11797" class="Keyword">import</a> <a id="11804" href="Foundation.Data.Vec.SetTheoretic.html" class="Module">Foundation.Data.Vec.SetTheoretic</a> <a id="11837" class="Keyword">public</a>
-  <a id="11846" class="Keyword">renaming</a> <a id="11855" class="Symbol">(</a><a id="11856" href="Data.Vec.Membership.Setoid.html#930" class="Function Operator">_∈_</a> <a id="11860" class="Symbol">to</a> <a id="11863" class="Function Operator">_∈⃗_</a><a id="11867" class="Symbol">;</a> <a id="11869" href="Data.Vec.Relation.Unary.Any.html#1085" class="Datatype">Any</a> <a id="11873" class="Symbol">to</a> <a id="11876" class="Datatype">Any⃗</a><a id="11880" class="Symbol">)</a>
+<pre class="Agda"><a id="11793" class="Keyword">open</a> <a id="11798" class="Keyword">import</a> <a id="11805" href="Foundation.Data.Vec.SetTheoretic.html" class="Module">Foundation.Data.Vec.SetTheoretic</a> <a id="11838" class="Keyword">public</a>
+  <a id="11847" class="Keyword">renaming</a> <a id="11856" class="Symbol">(</a><a id="11857" href="Data.Vec.Membership.Setoid.html#930" class="Function Operator">_∈_</a> <a id="11861" class="Symbol">to</a> <a id="11864" class="Function Operator">_∈⃗_</a><a id="11868" class="Symbol">;</a> <a id="11870" href="Data.Vec.Relation.Unary.Any.html#1085" class="Datatype">Any</a> <a id="11874" class="Symbol">to</a> <a id="11877" class="Datatype">Any⃗</a><a id="11881" class="Symbol">)</a>
 </pre>
 <h2 id="函数-1">函数</h2>
 <p>函数 <code>A → B</code> 在我们的元语言里是原始概念. 以下列出一些关于函数的常用概念.</p>
 <h3 id="序列">序列</h3>
-<pre class="Agda"><a id="11954" class="Keyword">open</a> <a id="11959" class="Keyword">import</a> <a id="11966" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="11995" class="Keyword">public</a>
+<pre class="Agda"><a id="11955" class="Keyword">open</a> <a id="11960" class="Keyword">import</a> <a id="11967" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="11996" class="Keyword">public</a>
 </pre>
 <p>我们把函数 <code>ℕ → A</code> 称为无穷序列 <code>InfSeq</code>, 它有 “希尔伯特旅馆”操作 <code>_∷ₙ_</code>, 第一个参数是安排到0号房间的新客人, 第二个参数是原来的客房安排.</p>
 <h3 id="同构">同构</h3>
-<pre class="Agda"><a id="12111" class="Keyword">open</a> <a id="12116" class="Keyword">import</a> <a id="12123" href="Foundation.Function.Isomorphism.html" class="Module">Foundation.Function.Isomorphism</a> <a id="12155" class="Keyword">public</a>
+<pre class="Agda"><a id="12112" class="Keyword">open</a> <a id="12117" class="Keyword">import</a> <a id="12124" href="Foundation.Function.Isomorphism.html" class="Module">Foundation.Function.Isomorphism</a> <a id="12156" class="Keyword">public</a>
 </pre>
 <p>同构 (<code>_≅_</code>) 是类型间的一对互逆的函数, 它构成了类型宇宙中的一种等价关系 (<code>idIso</code>, <code>invIso</code>, <code>compIso</code>).</p>
 <p><strong><u>定理</u> <code>univalence</code></strong> 当 <code>A</code> 是集合的时候, <code>A ≡ B</code> 与 <code>A ≅ B</code> 同构.</p>
 <h3 id="双射">双射</h3>
-<pre class="Agda"><a id="12322" class="Keyword">open</a> <a id="12327" class="Keyword">import</a> <a id="12334" href="Foundation.Function.Bijection.html" class="Module">Foundation.Function.Bijection</a> <a id="12364" class="Keyword">public</a>
+<pre class="Agda"><a id="12323" class="Keyword">open</a> <a id="12328" class="Keyword">import</a> <a id="12335" href="Foundation.Function.Bijection.html" class="Module">Foundation.Function.Bijection</a> <a id="12365" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong></p>
 <ul>
@@ -366,7 +366,7 @@ theorem_name = proof_term</code></pre>
 <h3 id="零元关系">零元关系</h3>
 <p>零元关系就是命题. 我们主要关心 <code>⊥</code> 这个命题, 并把它的衍生概念都放在零元关系 <code>Nullary</code> 模块中.</p>
 <h4 id="否定">否定</h4>
-<pre class="Agda"><a id="12934" class="Keyword">open</a> <a id="12939" class="Keyword">import</a> <a id="12946" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="12983" class="Keyword">public</a>
+<pre class="Agda"><a id="12935" class="Keyword">open</a> <a id="12940" class="Keyword">import</a> <a id="12947" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="12984" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> 否定的相关概念</p>
 <ul>
@@ -375,18 +375,18 @@ theorem_name = proof_term</code></pre>
 <li>稳定 <code>Stable = λ A → nonEmpty A → A</code></li>
 </ul>
 <h4 id="可判定">可判定</h4>
-<pre class="Agda"><a id="13128" class="Keyword">open</a> <a id="13133" class="Keyword">import</a> <a id="13140" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="13178" class="Keyword">public</a>
+<pre class="Agda"><a id="13129" class="Keyword">open</a> <a id="13134" class="Keyword">import</a> <a id="13141" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="13179" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> <code>A</code> 可判定, 记作 <code>Dec A</code>, 当且仅当 <code>A</code> 或 <code>¬ A</code>.</p>
 <p>如果 <code>A</code> 是一个命题, 那么其可判定性 <code>Dec A</code> 也是一个命题 (<code>isPropDec</code>).</p>
 <h4 id="离散">离散</h4>
-<pre class="Agda"><a id="13314" class="Keyword">open</a> <a id="13319" class="Keyword">import</a> <a id="13326" href="Foundation.Relation.Nullary.Discrete.html" class="Module">Foundation.Relation.Nullary.Discrete</a> <a id="13363" class="Keyword">public</a>
+<pre class="Agda"><a id="13315" class="Keyword">open</a> <a id="13320" class="Keyword">import</a> <a id="13327" href="Foundation.Relation.Nullary.Discrete.html" class="Module">Foundation.Relation.Nullary.Discrete</a> <a id="13364" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> <code>A</code> 离散, 当且仅当 <code>A</code> 上的 <code>_≡_</code> 可判定.</p>
 <p>如果一个类型是离散的, 那么它是一个集合 (<code>discrete→isSet</code>). 如果一个类型是集合, 那么它的离散性是一个命题 (<code>isPropDiscrete</code>). 离散集合宇宙 <code>𝔻 ℓ</code> 定义为 <code>TypeWithStr ℓ discrete</code>, 也叫经典集合宇宙.</p>
 <h3 id="一元关系">一元关系</h3>
 <h4 id="可数">可数</h4>
-<pre class="Agda"><a id="13587" class="Keyword">open</a> <a id="13592" class="Keyword">import</a> <a id="13599" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="13635" class="Keyword">public</a>
+<pre class="Agda"><a id="13588" class="Keyword">open</a> <a id="13593" class="Keyword">import</a> <a id="13600" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="13636" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong></p>
 <ul>
@@ -395,13 +395,23 @@ theorem_name = proof_term</code></pre>
 <li><code>A</code> 无限 (<code>infinite</code>), 当且仅当存在 <code>ℕ</code> 到 <code>A</code> 的单射 <code>ℕ ↣ A</code></li>
 </ul>
 <h4 id="可枚举">可枚举</h4>
-<pre class="Agda"><a id="13849" class="Keyword">open</a> <a id="13854" class="Keyword">import</a> <a id="13861" href="Foundation.Relation.Unary.Enumerable.html" class="Module">Foundation.Relation.Unary.Enumerable</a> <a id="13898" class="Symbol">as</a> <a id="13901" class="Module">E</a> <a id="13903" class="Keyword">public</a>
-<a id="13910" class="Keyword">open</a> <a id="13915" href="Foundation.Relation.Unary.Enumerable.html#2153" class="Module">E.ListView</a> <a id="13926" class="Keyword">public</a>
+<pre class="Agda"><a id="13850" class="Keyword">open</a> <a id="13855" class="Keyword">import</a> <a id="13862" href="Foundation.Relation.Unary.Enumerable.html" class="Module">Foundation.Relation.Unary.Enumerable</a> <a id="13899" class="Symbol">as</a> <a id="13902" class="Module">E</a> <a id="13904" class="Keyword">public</a>
+<a id="13911" class="Keyword">open</a> <a id="13916" href="Foundation.Relation.Unary.Enumerable.html#2153" class="Module">E.ListView</a> <a id="13927" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> <code>A</code> 可枚举, 当且仅当存在函数 <code>f : ℕ → A ⊎ ⊤</code>, 使得对任意 <code>x : A</code>, 存在 <code>n</code> 满足 <code>f n ≡ x</code>.</p>
 <p><strong><u>定理</u> <code>discr→enum→count</code></strong> 如果 <code>A</code> 离散 (这意味着 <code>A</code> 是集合), 并且 <code>A</code> 可枚举, 那么 <code>A</code> 可数.</p>
 <p>我们通常使用可枚举的另一种定义:</p>
-<p><strong><u>定义</u></strong> <code>A</code> 可枚举, 当且仅当存在 <code>A</code> 的一个枚举 <code>Enum A</code>, 它是一个二元组 1. 使得条件 <code>wit</code> 成立的列表无穷序列 <code>enum : 𝕃ₙ A</code>. 其中 <code>wit</code> 是说对任意 <code>x : A</code>, 存在 <code>n</code> 满足 <code>x ∈ᴸ enum n</code> 2. <code>f</code> 的一个累积 <code>cum : Cumulation f</code></p>
+<p><strong><u>定义</u></strong> 见证集和见证条件</p>
+<ul>
+<li>见证集: 给定无穷序列 <code>f : 𝕃ₙ A</code> 和 <code>x : A</code>, 满足 <code>x ∈ᴸ enum n</code> 的所有 <code>n</code> 组成的集合叫做 <code>x</code> 在 <code>f</code> 中的见证集, 记作 <code>Witness f x</code>.<br />
+</li>
+<li>见证条件: 我们说无穷序列 <code>f : 𝕃ₙ A</code> 见证了 <code>x : A</code>, 记作 <code>f witness x</code>, 当且仅当存在 <code>n</code> 满足 <code>x ∈ᴸ enum n</code>, 也即 <code>∥ Witness f x ∥₁</code> 成立.</li>
+</ul>
+<p><strong><u>定义</u></strong> <code>A</code> 可枚举, 当且仅当存在 <code>A</code> 的一个枚举 <code>Enum A</code>, 它是一个二元组</p>
+<ol type="1">
+<li>“见证了所有 <code>x : A</code>” (该条件记作 <code>wit</code>) 的列表无穷序列 <code>enum : 𝕃ₙ A</code></li>
+<li><code>f</code> 的一个累积 <code>cum : Cumulation f</code></li>
+</ol>
 <p>可枚举的这两种定义是逻辑等价的 (<code>enumerable↔︎Ⓜ</code>).</p>
 <hr />
 <blockquote>
