--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -77,6 +77,7 @@
   <li><a href="#函数-1" id="toc-函数-1">函数</a>
   <ul>
   <li><a href="#序列" id="toc-序列">序列</a></li>
+  <li><a href="#枚举" id="toc-枚举">枚举</a></li>
   <li><a href="#同构" id="toc-同构">同构</a></li>
   <li><a href="#双射" id="toc-双射">双射</a></li>
   </ul></li>
@@ -336,13 +337,19 @@ theorem_name = proof_term</code></pre>
 <pre class="Agda"><a id="11736" class="Keyword">open</a> <a id="11741" class="Keyword">import</a> <a id="11748" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="11777" class="Keyword">public</a>
 </pre>
 <p>我们把函数 <code>ℕ → A</code> 称为无穷序列 <code>InfSeq</code>, 它有 “希尔伯特旅馆”操作 <code>_∷ₙ_</code>, 第一个参数是安排到0号房间的新客人, 第二个参数是原来的客房安排.</p>
+<h3 id="枚举">枚举</h3>
+<pre class="Agda"><a id="11893" class="Keyword">open</a> <a id="11898" class="Keyword">import</a> <a id="11905" href="Foundation.Function.Enumeration.ListView.Base.html" class="Module">Foundation.Function.Enumeration.ListView.Base</a> <a id="11951" class="Keyword">public</a>
+<a id="11958" class="Keyword">open</a> <a id="11963" class="Keyword">import</a> <a id="11970" href="Foundation.Function.Enumeration.ListView.Instance.html" class="Module">Foundation.Function.Enumeration.ListView.Instance</a> <a id="12020" class="Keyword">public</a>
+<a id="12027" class="Keyword">open</a> <a id="12032" class="Keyword">import</a> <a id="12039" href="Foundation.Function.Enumeration.ListView.Properties.html" class="Module">Foundation.Function.Enumeration.ListView.Properties</a> <a id="12091" class="Keyword">public</a>
+</pre>
+<p>枚举是满足一定性质的特殊函数, 是关乎我们对象语言的重要构造, 其变体甚多, 我们单独设为一章: <a href="https://www.yuque.com/ocau/metalogic/foundation.enumeration.maybeview">0.2 枚举</a>.</p>
 <h3 id="同构">同构</h3>
-<pre class="Agda"><a id="11893" class="Keyword">open</a> <a id="11898" class="Keyword">import</a> <a id="11905" href="Foundation.Function.Isomorphism.html" class="Module">Foundation.Function.Isomorphism</a> <a id="11937" class="Keyword">public</a>
+<pre class="Agda"><a id="12250" class="Keyword">open</a> <a id="12255" class="Keyword">import</a> <a id="12262" href="Foundation.Function.Isomorphism.html" class="Module">Foundation.Function.Isomorphism</a> <a id="12294" class="Keyword">public</a>
 </pre>
 <p>同构 (<code>_≅_</code>) 是类型间的一对互逆的函数, 它构成了类型宇宙中的一种等价关系 (<code>idIso</code>, <code>invIso</code>, <code>compIso</code>).</p>
 <p><strong><u>定理</u> <code>univalence</code></strong> 当 <code>A</code> 是集合的时候, <code>A ≡ B</code> 与 <code>A ≅ B</code> 同构.</p>
 <h3 id="双射">双射</h3>
-<pre class="Agda"><a id="12104" class="Keyword">open</a> <a id="12109" class="Keyword">import</a> <a id="12116" href="Foundation.Function.Bijection.html" class="Module">Foundation.Function.Bijection</a> <a id="12146" class="Keyword">public</a>
+<pre class="Agda"><a id="12461" class="Keyword">open</a> <a id="12466" class="Keyword">import</a> <a id="12473" href="Foundation.Function.Bijection.html" class="Module">Foundation.Function.Bijection</a> <a id="12503" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong></p>
 <ul>
@@ -363,7 +370,7 @@ theorem_name = proof_term</code></pre>
 <h3 id="零元关系">零元关系</h3>
 <p>零元关系就是命题. 我们主要关心 <code>⊥</code> 这个命题, 并把它的衍生概念都放在零元关系 <code>Nullary</code> 模块中.</p>
 <h4 id="否定">否定</h4>
-<pre class="Agda"><a id="12716" class="Keyword">open</a> <a id="12721" class="Keyword">import</a> <a id="12728" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="12765" class="Keyword">public</a>
+<pre class="Agda"><a id="13073" class="Keyword">open</a> <a id="13078" class="Keyword">import</a> <a id="13085" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="13122" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> 否定的相关概念</p>
 <ul>
@@ -372,18 +379,18 @@ theorem_name = proof_term</code></pre>
 <li>稳定 <code>Stable = λ A → nonEmpty A → A</code></li>
 </ul>
 <h4 id="可判定">可判定</h4>
-<pre class="Agda"><a id="12910" class="Keyword">open</a> <a id="12915" class="Keyword">import</a> <a id="12922" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="12960" class="Keyword">public</a>
+<pre class="Agda"><a id="13267" class="Keyword">open</a> <a id="13272" class="Keyword">import</a> <a id="13279" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="13317" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> <code>A</code> 可判定, 记作 <code>Dec A</code>, 当且仅当 <code>A</code> 或 <code>¬ A</code>.</p>
 <p>如果 <code>A</code> 是一个命题, 那么其可判定性 <code>Dec A</code> 也是一个命题 (<code>isPropDec</code>).</p>
-<h4 id="离散">离散</h4>
-<pre class="Agda"><a id="13096" class="Keyword">open</a> <a id="13101" class="Keyword">import</a> <a id="13108" href="Foundation.Relation.Nullary.Discrete.html" class="Module">Foundation.Relation.Nullary.Discrete</a> <a id="13145" class="Keyword">public</a>
+<h4 id="离散性">离散性</h4>
+<pre class="Agda"><a id="13454" class="Keyword">open</a> <a id="13459" class="Keyword">import</a> <a id="13466" href="Foundation.Relation.Nullary.Discrete.Base.html" class="Module">Foundation.Relation.Nullary.Discrete.Base</a> <a id="13508" class="Keyword">public</a>
+<a id="13515" class="Keyword">open</a> <a id="13520" class="Keyword">import</a> <a id="13527" href="Foundation.Relation.Nullary.Discrete.Instance.html" class="Module">Foundation.Relation.Nullary.Discrete.Instance</a> <a id="13573" class="Keyword">public</a>
 </pre>
-<p><strong><u>定义</u></strong> <code>A</code> 离散, 当且仅当 <code>A</code> 上的 <code>_≡_</code> 可判定.</p>
-<p>如果一个类型是离散的, 那么它是一个集合 (<code>discrete→isSet</code>). 如果一个类型是集合, 那么它的离散性是一个命题 (<code>isPropDiscrete</code>). 离散集合宇宙 <code>𝔻 ℓ</code> 定义为 <code>TypeWithStr ℓ discrete</code>, 也叫经典集合宇宙.</p>
+<p>离散性与枚举函数的性质密切相关, 与之一样, 我们单独设为一章: <a href="https://www.yuque.com/ocau/metalogic/foundation.discrete.base">0.1 离散性</a>.</p>
 <h3 id="一元关系">一元关系</h3>
 <h4 id="可数">可数</h4>
-<pre class="Agda"><a id="13369" class="Keyword">open</a> <a id="13374" class="Keyword">import</a> <a id="13381" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="13417" class="Keyword">public</a>
+<pre class="Agda"><a id="13720" class="Keyword">open</a> <a id="13725" class="Keyword">import</a> <a id="13732" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="13768" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong></p>
 <ul>
